--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.9'
 services:
   db:
   # You can change it #
-    image: postgres:16.0
+    image: postgres:latest
     container_name: ${CONTAINER_NAME}
     restart: always
     environment:
