--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "app-iot-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "dev": "nodemon src/index.ts",
     "build": "tsc",
