--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^6.5.0",
     "@types/morgan": "^1.9.9",
     "axios": "^1.8.4",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "morgan": "^1.10.0",
