--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.9",
+    "@types/nodemailer": "^6.4.17",
+    "@types/speakeasy": "^2.0.10",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
@@ -27,8 +29,10 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.10.0",
     "prisma": "^6.5.0",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.2.2",
+    "speakeasy": "^2.0.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
